--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,7 +1,8 @@
 file.reference.ZendFramework-1.11-library=../../ZendFramework-1.11/library
+file.reference.ZendTest1-library=../ZendTest1/library
 include.path=\
     ${php.global.include.path}:\
-    ${file.reference.ZendFramework-1.11-library}
+    ${file.reference.ZendTest1-library}
 php.version=PHP_54
 source.encoding=UTF-8
 src.dir=.
