--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -2,5 +2,8 @@ copy.src.files=false
 copy.src.on.open=false
 copy.src.target=C:\\xampp\\htdocs\\Fosefap_v1.2
 index.file=
-run.as=LOCAL
+remote.connection=MatrizMedia-19e29b
+remote.directory=/public_html/demos/Fosefap_v1.2
+remote.upload=MANUALLY
+run.as=REMOTE
 url=http://localhost/zend/Fosefap_v1.2/
